# traceview

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  component.rs  main.rs  models.rs  panic_handling.rs  tui.rs  utils.rs
src/app/: actions.rs  config.rs  key_bindings.rs  mod.rs
src/file_handling/: metadata.rs  mod.rs
src/system/: mod.rs
src/ui/: about_widget.rs  dropdown.rs  explorer_widget.rs  footer_widget.rs  help_widget.rs  info_widget.rs  input.rs  metadata_widget.rs  mod.rs  result_widget.rs  search_widget.rs  settings_widget.rs  title_widget.rs
