[package]
name = "traceview"
authors = ["javaLux"]
version = "2.1.0"
edition = "2024"
description = "Tracing and viewing your files and resource landscape"
license = "MIT"
repository = "https://github.com/javaLux/traceview"
readme = "README.md"
keywords = ["file-explorer", "tui", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Common dependencies ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "cargo", "string"] }
crossterm = { version = "0.29.0", default-features = false, features = ["event-stream", "serde"] }
ratatui = "0.30.0"
tokio = { version = "1.49.0", default-features = false, features = ["macros", "time", "rt-multi-thread", "fs"] }
tokio-util = "0.7.18"
futures = "0.3.32"
path-absolutize = "3.1.1"
serde = { version = "1.0.228", default-features = false, features = ["serde_derive"] }
serde_json = "1.0.149"
log = "0.4.29"
os_info = { version = "3.14.0", default-features = false }
simplelog = "0.12.2"
chrono = "0.4.44"
sysinfo = "0.38.2"
walkdir = "2.5.0"
async-trait = "0.1.89"
file-format = {version = "0.28.0", features = ["reader"]}
dirs = "6.0.0"
confy = "2.0.0"
console = "0.16.2"
copypasta = "0.10.2"
human_bytes = {version = "0.4.3", default-features = false}


[profile.release]
# compiler optimizations for binary size
opt-level = "s"
# link optimizations -> causes a longer link time but produce better optimize code
lto = true
# strip either symbols or debug info from the final binary
strip = true
